messages pages edits

--- a/templates/css/style.scss
+++ b/templates/css/style.scss
@@ -3980,11 +3980,12 @@ i.offline{
 
 		h1{
 			margin: 5px 0;
+			width: 100%;
 		}
 
 		.checkbox{
 			display: block;
-			margin-bottom: 10px;
+			margin-bottom: 5px;
 		}
 
 		button{
